--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>
 <article>
         <h1>Blog</h1>
-        <h3>Les nouvelles technologies dans le monde qui nous entour</h3>
+        <h3>Les nouvelles technologies qui nous entourent</h3>
 </article>
 <i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i>
 </header>
@@ -32,8 +32,9 @@
 
     <section class="grand">
         <figure>
-        <img src="img/hoverboard.jpg" alt="technologies">
+        <img src="img/capt.png" alt="technologies">
         </figure>
+
         <article class="petit">
             <h2>Photo 1</h2>
             <p>Blabla sur l'article on verra tout ca plus tard</p>
@@ -42,10 +43,17 @@
     </section>
 
     <section class="grand">
+            <article class="petit tablette">
+            <h2>Photo 2</h2>
+            <p>Blabla sur l'article on verra tout ca plus tard</p>
+            <a href="">En savoir plus</a>
+        </article>
+
         <figure>
         <img src="img/stores.jpg" alt="technologies">
         </figure>
-        <article class="petit">
+
+        <article class="petit phone">
             <h2>Photo 2</h2>
             <p>Blabla sur l'article on verra tout ca plus tard</p>
             <a href="">En savoir plus</a>
@@ -56,6 +64,7 @@
         <figure>
         <img src="img/pendentif.jpeg" alt="technologies">
         </figure>
+
         <article class="petit">
             <h2>Photo 3</h2>
             <p>Blabla sur l'article on verra tout ca plus tard</p>
