ajout des pages 'en savoir plus'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Arvo|Patua+One" rel="stylesheet"> 
+         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -36,16 +37,16 @@
         </figure>
 
         <article class="petit">
-            <h2>Photo 1</h2>
-            <p>Blabla sur l'article on verra tout ca plus tard</p>
+            <h2>L'hoverboard</h2>
+            <p>En quelques années, l'hoverboard est devenu un véritable phénomène de société. Ce moyen de transport innovant et accessible à tous a même séduit bon nombre de personnalités et de stars, lui assurant...</p>            
             <a href="">En savoir plus</a>
         </article>
     </section>
 
     <section class="grand">
             <article class="petit tablette">
-            <h2>Photo 2</h2>
-            <p>Blabla sur l'article on verra tout ca plus tard</p>
+            <h2>Les stores en panneaux solairs</h2>
+            <p>Produire votre propre énergie dans votre maison ou votre appartement ? C’est désormais possible grâce aux stores solaires et intelligents...</p>
             <a href="">En savoir plus</a>
         </article>
 
@@ -54,8 +55,8 @@
         </figure>
 
         <article class="petit phone">
-            <h2>Photo 2</h2>
-            <p>Blabla sur l'article on verra tout ca plus tard</p>
+            <h2>Les stores en panneaux solairs</h2>
+            <p>Produire votre propre énergie dans votre maison ou votre appartement ? C’est désormais possible grâce aux stores solaires et intelligents...</p>
             <a href="">En savoir plus</a>
         </article>
     </section>
@@ -66,16 +67,16 @@
         </figure>
 
         <article class="petit">
-            <h2>Photo 3</h2>
-            <p>Blabla sur l'article on verra tout ca plus tard</p>
+            <h2>Pendentif conecté</h2>
+            <p> Ce petit appareil permet d’enregistrer toutes vos pensées sans même avoir à sortir votre smartphone de votre poche. Le Senstone enregistre les mémos vocaux...</p>
             <a href="">En savoir plus</a>
         </article>
     </section>
 
 </section>
 
-    <form class="container">
-    <div class="row">
+    <section class="container contact">
+    <section class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="well well-sm">
           <form class="form-horizontal" action="" method="post">
@@ -117,7 +118,7 @@
         </div>
       </div>
     </div>
-</form>
+</section>
 
 <footer>
     <article class="logo">
