--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link href="https://fonts.googleapis.com/css?family=Arvo|Patua+One" rel="stylesheet"> 
          <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body class="principal">
 
@@ -35,6 +34,7 @@
 
     <section class="grand">
         <figure>
+        <p id="text"> </p>
         <img src="img/capt.png" alt="technologies">
         </figure>
 
@@ -53,6 +53,7 @@
         </article>
 
         <figure>
+        <p class="text"></p>
         <img src="img/stores.jpg" alt="technologies">
         </figure>
 
@@ -122,6 +123,10 @@
     </div>
 </section>
 
+<p id="onverra"></p>
+<hr>
+<br>
+<p>Vous êtes conecté depuis  <span id="minute"></span><span id="timmer"></span> secondes</p>
 <footer>
     <article class="logo">
         <a href="https://twitter.com/julie_canett"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -130,26 +135,25 @@
     </article>
 </footer>
 
+<!-- - - - - - FIN DU FOOTER - - - - - - -->
 
 
 
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+         <script type="text/javascript" src="js/js/bootstrap.min.js"></script>
 
     </body>
 </html>
