ajout tableau interactif

--- a/index.html
+++ b/index.html
@@ -129,6 +129,34 @@
 <hr>
 <br>
 <p>Vous êtes conecté depuis  <span id="minute"></span><span id="timmer"></span> secondes</p>
+
+<table>
+<tr>
+   <th onclick="show(); color();" id="titre">Nom</th>
+   <th onclick="show1(); color();" id="titre1">Age</th>
+   <th onclick="show2(); color();" id="titre2">Nationalité</th> 
+</tr>
+
+   <tr id="nom">
+       <td>Remi</td>
+       <td>Rebecca</td>
+       <td>Thomas</td>
+   </tr>
+
+   <tr id="age" style="visibility: collapse">
+       <td>25 ans</td>
+       <td>24 ans</td>
+       <td>26 ans</td>
+   </tr>
+
+   <tr id="natio" style="visibility: collapse">
+       <td>Belge</td>
+       <td>Française</td>
+       <td>Americain</td>
+   </tr>
+</table>
+
+
 <footer>
     <article class="logo">
         <a href="https://twitter.com/julie_canett"><i class="fa fa-twitter" aria-hidden="true"></i></a>
